# happymimi_robot2

./: README.md  package.xml
happymimi_bringup/: CMakeLists.txt  package.xml
happymimi_bringup/config/: localization_param.yaml
happymimi_bringup/launch/: display_robot2_launch.xml  minimal.launch.py  minimal_launch.xml  robot.launch.py  sensor_launch.xml
happymimi_bringup/launch/include/sensor/: respeaker_launch.xml
happymimi_bringup2/: CMakeLists.txt  package.xml
happymimi_bringup2/config/: 33-happymimi-g2.rules  mimi_motor.yaml
happymimi_bringup2/launch/: minimal.launch  minimal.launch.py  minimal2_launch.xml
happymimi_bringup2/launch/include/: localization.launch.xml  megarover_launch.xml  robot_launch.xml
happymimi_bringup2/launch/include/sensor/: motor_setup_launch.xml  realsense_launch.xml
happymimi_bringup2/src/: pub_odom.cpp  pub_odom2.cpp
happymimi_bringup_ros2/: CMakeLists.txt  package.xml
happymimi_bringup_ros2/launch/: megarover3.launch.py  sample_launch.xml  sensor_launch.xml
happymimi_bringup_ros2/launch/include/: robot_launch.xml
happymimi_bringup_ros2/launch/include/sensor/: 2dlidar_launch.xml
happymimi_bringup_ros2/src/: pub_odom.cpp
happymimi_description/: CMakeLists.txt  package.xml
happymimi_description/launch/: vhappymimi_with_empty_world.launch.xml  vhappymimi_with_empty_world_launch.xml  vhappymimi_with_sample_world.launch.xml  vhappymimi_with_sample_world_launch.xml  view_model_launch.xml  vmegarover_with_empty_world.launch.py
happymimi_description/robots/: happymimi.urdf  happymimi.urdf.xacro  vhappymimi.urdf  vhappymimi.urdf.xacro
happymimi_description/urdf/camera/: d435.gazebo.xacro
happymimi_description2/: CMakeLists.txt  package.xml
happymimi_description2/launch/: view_model_launch.xml
happymimi_description_ros2/: CMakeLists.txt  package.xml
happymimi_msgs/: CMakeLists.txt  package.xml
happymimi_msgs2/: CMakeLists.txt  package.xml
happymimi_msgs2/install/: local_setup.sh  setup.sh
happymimi_msgs2/install/happymimi_msgs2/share/happymimi_msgs2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
happymimi_msgs2/install/happymimi_msgs2/share/happymimi_msgs2/cmake/: happymimi_msgs2Config.cmake
happymimi_msgs2/log/: latest_build
happymimi_msgs_ros2/: CMakeLists.txt  package.xml
happymimi_msgs_ros2/msg/: StrInt.msg
happymimi_param/: CMakeLists.txt  package.xml
happymimi_param/location/: rcap_2021_map_range.yaml
happymimi_param/object/: object_mapping.yaml
happymimi_param_ros2/: CMakeLists.txt  package.xml
happymimi_params2/: CMakeLists.txt  package.xml
happymimi_params2/location/: rcap_2021_map.yaml  rcap_test_1.yaml  tmp_human_location.yaml
happymimi_robot/: CMakeLists.txt  package.xml
happymimi_robot2/: CMakeLists.txt  package.xml
